--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       text-align: right;
       overflow: hidden; text-overflow: ellipsis; white-space: nowrap;
     }
-    .expr { min-height: 24px; color: var(--muted); font-size: 14px; }
+    .expr { min-height: 28px; color: var(--muted); font-size: clamp(16px, 2.2vh, 18px); }
     .result { min-height: 40px; font-size: 28px; font-variant-numeric: tabular-nums; }
 
     .keys {
@@ -86,7 +86,7 @@
     .equals { background: linear-gradient(180deg, rgba(110,168,255,0.25), rgba(110,168,255,0.08)); border-color: rgba(110,168,255,0.45); }
     .ok { background: linear-gradient(180deg, rgba(74,222,128,0.25), rgba(74,222,128,0.08)); border-color: rgba(74,222,128,0.45); }
 
-    .toolbar { display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; padding: 12px 14px; background: rgba(255,255,255,0.02); border-bottom: 1px solid rgba(255,255,255,0.06); }
+    .toolbar { display: grid; grid-template-columns: repeat(5, 1fr); gap: 10px; padding: 12px 14px; background: rgba(255,255,255,0.02); border-bottom: 1px solid rgba(255,255,255,0.06); }
     .footer { padding: 10px 14px 16px; text-align: center; color: var(--muted); font-size: 12px; }
     .footer kbd { padding: 2px 6px; border-radius: 6px; border: 1px solid rgba(255,255,255,.1); background: rgba(255,255,255,.03); }
 
