feat(app): メモとQRページを追加しナビ連携 - memo.html: ローカル保存の簡易タスクメモ - qr.html: URLのQR表示・コピー・PNG保存 - index/help: タブに『メモ』『QR』追加 - sw: v1.1.3 へバンプ＆プリキャッシュ登録

--- a/help.html
+++ b/help.html
@@ -43,6 +43,8 @@
     <nav class="tabs" aria-label="ナビゲーション">
       <a class="tab" href="./">電卓</a>
       <a class="tab active" href="./help.html">説明</a>
+      <a class="tab" href="./memo.html">メモ</a>
+      <a class="tab" href="./qr.html">QR</a>
     </nav>
     <section class="content">
       <h1>使い方</h1>
