--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
     <nav class="tabs" aria-label="ナビゲーション">
       <a class="tab active" href="./">電卓</a>
       <a class="tab" href="./help.html">説明</a>
+      <a class="tab" href="./memo.html">メモ</a>
+      <a class="tab" href="./qr.html">QR</a>
     </nav>
 
     <section class="display" aria-live="polite">
