feat(memo): 長文対応（textarea, 改行保持, Ctrl+Enter追加） feat(qr): 既定URLを電卓トップに変更（/qrを除外） docs(help): メモ/QRの説明を追加

--- a/help.html
+++ b/help.html
@@ -75,6 +75,18 @@
       <ul>
         <li>「コピー」で結果をクリップボードへ。「共有」は端末の共有シートを開きます（対応端末のみ）。</li>
       </ul>
+      <h2>メモ（タスク・日記）</h2>
+      <ul>
+        <li>「メモ」タブで、タスクだけでなく日記のような複数行の長文も記録できます。</li>
+        <li><kbd>Ctrl</kbd>+<kbd>Enter</kbd> で追加。改行は保持されます。チェックで完了、削除ボタンで除去。</li>
+        <li>データは端末内に自動保存（localStorage: <code>calc_memo_tasks</code>）。他端末とは共有されません。</li>
+      </ul>
+      <h2>QRコード共有</h2>
+      <ul>
+        <li>「QR」タブでURLのQRコードを生成・表示します。既定は電卓トップ（このアプリのURL）。</li>
+        <li>URL欄を書き換えて任意のページのQRを生成可能。URLのコピー/共有/PNG保存に対応。</li>
+        <li>QR画像の生成はオンライン時のみ（<code>api.qrserver.com</code>）。ページ自体はオフラインで開けます。</li>
+      </ul>
       <h2>履歴と永続化</h2>
       <ul>
         <li>直近10件の履歴を保持。DEG/RAD、メモリ、関数表示状態は自動保存されます。</li>
