--- a/memo.html
+++ b/memo.html
@@ -41,19 +41,22 @@
     .list{ margin-top:14px; display:grid; gap:8px; }
     .group-title{ margin-top:16px; color:var(--muted); font-size:12px; border-left:3px solid rgba(255,255,255,.2); padding-left:8px; }
     .item{ display:flex; gap:10px; align-items:flex-start; justify-content:space-between; padding:10px 12px; background: rgba(255,255,255,.03); border:1px solid rgba(255,255,255,.08); border-radius:12px; }
-    .left{ display:flex; gap:10px; align-items:flex-start; }
+    .item.editing{ flex-direction: column; align-items: stretch; }
+    .left{ display:flex; gap:10px; align-items:flex-start; flex:1; min-width:0; }
     .title{ color:var(--text); white-space: pre-wrap; }
     .title.done{ color:var(--muted); text-decoration: line-through; opacity:.8; }
     .meta{ color:var(--muted); font-size:11px; }
     .tags{ display:flex; flex-wrap:wrap; gap:6px; margin-top:6px; }
     .tag{ font-size:11px; padding:2px 6px; border-radius:999px; background: rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.12); color:var(--muted); }
-    .controls{ display:flex; gap:6px; align-items:center; }
+    .controls{ display:flex; gap:6px; align-items:center; flex-shrink:0; }
     .controls button{ padding:6px 10px; font-size:12px; border-radius:8px; border:1px solid rgba(255,255,255,.12); background: rgba(255,255,255,.04); color:var(--text); cursor:pointer; }
     .controls .del{ border-color: rgba(255,255,255,.18); color:#ffd2d2; }
     .pin{ color:#ffd479; }
     .overdue{ color:#ffb4b4; }
     .hint{ color:var(--muted); font-size:12px; margin-top:10px; }
     .due-hint{ color:var(--muted); font-size:11px; }
+    .due-field{ position:relative; display:inline-block; }
+    .due-placeholder{ position:absolute; left:12px; top:50%; transform: translateY(-50%); color:var(--muted); font-size:12px; opacity:.75; pointer-events:none; }
 
     .archived-note{ color:var(--muted); font-size:12px; margin-top:8px; }
     .lock-panel{ margin-top:12px; padding:12px; background: rgba(255,255,255,.03); border:1px solid rgba(255,255,255,.08); border-radius:12px; }
@@ -61,13 +64,14 @@
     .drag-handle{ cursor:grab; user-select:none; padding:4px 6px; border:1px solid rgba(255,255,255,.12); border-radius:6px; background: rgba(255,255,255,.04); }
     .body-preview{ color:var(--muted); font-size:12px; margin-top:6px; white-space: pre-wrap; }
     .body-editor{ margin-top:8px; }
-    .body-editor textarea{ width:100%; min-height:120px; max-height:50vh; overflow:auto; padding:10px 12px; border-radius:10px; border:1px solid rgba(255,255,255,.12); background: rgba(0,0,0,.15); color:var(--text); }
+    .body-editor textarea{ width:100%; min-height:180px; max-height:60vh; overflow:auto; padding:10px 12px; border-radius:10px; border:1px solid rgba(255,255,255,.12); background: rgba(0,0,0,.15); color:var(--text); }
 
     @media (max-width: 720px){
       .app{ width:100vw; min-height:100dvh; border-radius:0; }
       .input-row{ flex-direction: column; }
       .input-row .side{ width:100%; justify-content: space-between; }
-      .controls{ flex-wrap: wrap; }
+      .item{ flex-direction: column; align-items: stretch; }
+      .controls{ flex-wrap: wrap; justify-content:flex-end; }
       .controls button{ flex:1 1 calc(50% - 6px); }
       .toolbar{ gap:6px; }
       .toolbar .spacer{ display:none; }
@@ -91,8 +95,10 @@
       <div class="input-row">
         <input id="taskInput" type="text" placeholder="タイトルを入力（本文は後から各アイテムで編集）" aria-label="新規メモのタイトル" />
         <div class="side">
-          <input id="dueInput" type="datetime-local" aria-label="期日" title="未設定でもOK" />
-          <span class="due-hint">未設定は空のままでOK</span>
+          <span class="due-field">
+            <input id="dueInput" type="datetime-local" aria-label="期日" title="未設定でもOK" />
+            <span id="duePlaceholder" class="due-placeholder">日時設定</span>
+          </span>
           <label style="display:flex;align-items:center;gap:6px;">
             <input id="pinInput" type="checkbox" />★
           </label>
@@ -155,6 +161,7 @@
       const dueEl = document.getElementById('dueInput');
       const pinEl = document.getElementById('pinInput');
       const addBtn = document.getElementById('addBtn');
+      const duePh = document.getElementById('duePlaceholder');
       const counterEl = document.getElementById('charCounter');
       const filterSel = document.getElementById('filterSel');
       const sortSel = document.getElementById('sortSel');
@@ -257,7 +264,7 @@
         takeSnapshot();
         tasks.unshift({ id: uid(), title: t, body: '', done: false, ts: Date.now(), pinned: !!pinEl.checked, dueAt, archived:false, tags: parseTags(t) });
         save(); render();
-        inputEl.value=''; pinEl.checked=false; dueEl.value=''; inputEl.blur(); updateCounter();
+        inputEl.value=''; pinEl.checked=false; dueEl.value=''; inputEl.blur(); updateCounter(); updateDuePlaceholder();
       }
       function toggleDone(id, v){ const t = tasks.find(x=>x.id===id); if (!t) return; takeSnapshot(); t.done=!!v; save(); render(); }
       function togglePin(id){ const t = tasks.find(x=>x.id===id); if (!t) return; takeSnapshot(); t.pinned = !t.pinned; save(); render(); }
@@ -318,7 +325,7 @@
           const showEditor = openBody.has(t.id);
           const draggable = (sortSel.value==='manual');
           html += `
-          <div class="item" data-id="${t.id}" draggable="${draggable}">
+          <div class="item ${showEditor?'editing':''}" data-id="${t.id}" draggable="${draggable}">
             <div class="left">
               <input type="checkbox" ${t.done ? 'checked' : ''} aria-label="完了">
               <div>
@@ -434,6 +441,11 @@
       filterSel.addEventListener('change', render);
       sortSel.addEventListener('change', render);
       searchInput.addEventListener('input', ()=> { render(); });
+      function updateDuePlaceholder(){ if (!duePh) return; duePh.style.display = (dueEl.value || document.activeElement===dueEl) ? 'none' : ''; }
+      dueEl.addEventListener('focus', updateDuePlaceholder);
+      dueEl.addEventListener('blur', updateDuePlaceholder);
+      dueEl.addEventListener('input', updateDuePlaceholder);
+      dueEl.addEventListener('change', updateDuePlaceholder);
       bulkArchiveBtn.addEventListener('click', archiveDone);
       bulkClearDoneBtn.addEventListener('click', clearDone);
       undoBtn.addEventListener('click', undo);
@@ -468,7 +480,7 @@
 
       // Init
       if (hasEncrypted()){ locked = true; updateLockUI(); } else { loadPlain(); }
-      render(); updateCounter();
+      render(); updateCounter(); updateDuePlaceholder();
     })();
   </script>
 </body>
